k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speech2text-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: app-instance
      app.kubernetes.io/name: app
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: app-instance
        app.kubernetes.io/name: app
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      containers:
      - name: speech2text-backend
        image: speech2text-backend
        # envFrom:
        #   - secretRef:
        #       name: wd-secret
        ports:
        - name: http
          protocol: TCP
          containerPort: 8000
        resources: {}
        livenessProbe:
          failureThreshold: 3
          httpGet:
            port: 8000
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            port: http
            path: /
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: mnonaka-pull-secret
      securityContext:
        fsGroup: 1001030000
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
